assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    height: 100%;
}

body {
    font-family: Raleway, Verdana, sans-serif;
    font-size: 1rem;
    background-color: white;
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

h1, h2, h3 {
    font-family: Verdana, sans-serif;
    font-weight: 700;
    font-size: 2rem;
    color: #1a1a1a;
    text-align: center;
    padding: 1em 0;
}

h1 {
    padding: 0;
    color: white;
    font-size: clamp(3.5rem, 6vw, 5rem);
    animation: fade-in-text ease-in 2s;
}

/* Remove default styling for links */
a {
    text-decoration: none;
    color: #944c42;
    font-weight: 700;
}

li {
    list-style: none;
}

/* Styling for header, nav element */
.navbar-logo {
    max-height: 3rem;
}

.logo-big {
    display: block;
}

.logo-small {
    display: none;
}

header {
    background-color: #1a1a1a;
    min-height: 75px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 10%;
    position: sticky;
    top: 0;
    z-index: 99;
}

.nav-links > li {
    display: inline;
    margin-left: 2rem;
}

.nav-links a {
    color: white;
    transition: all 0.9s linear 0s;
}

.nav-links a:hover {
    color: #78a51a;
}

.active-page {
    border-bottom: 2px solid #78a51a;
}

/* Styling for hero image and heading */
.hero-outer {
    position: relative;
}

#home-hero {
    background-image: url("../media/index-hero-hog.webp");
}

#help-hero {
    background-image: url("../media/help-hero-hog.webp");
}

.hero-image {
    height: min(75vh, 600px);
    width: 100%;
    background: center center / cover no-repeat;
}

.hero-text {
    max-width: 25%;
    position: absolute;
    top: 150px;
    left: 10%;
}

.hero-text > button {
    padding: 0.5em 1em;
    margin-top: 3em;
    display: inline-block;
    white-space: nowrap;
}

/* Styling about section on index.html */
.about-container {
    min-height: 250px;
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 1.5em;
}

.about-box {
    text-align: justify;
    max-width: 350px;
    padding: 0 1em;
}

/* Styling why help section of index.html */
#why-help {
    min-height: 600px;
    width: 100%;
    background: url("../media/why-help-hog.webp") center center / cover no-repeat fixed;
    margin-top: 1.5rem;
}

#why-help > h2 {
    color: white;
}

.reasons {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 1.5rem;
    padding-bottom: 1.5rem;
}

.reasons-bg {
    background-color: rgba(242, 236,210, 0.7);
    width: 300px;
    max-height: 400px;
    border-radius: 10px;
    padding: 1.5rem;
    text-align: justify;
    display: flex;
    align-items: center;
}

/* Styling cta video section of index.html */
.cta-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 2rem;
    padding-bottom: 2rem;
}

.cta-video {
    width: clamp(300px, 30%, 800px);
}

.hog-video {
    width: 100%;
    height: auto;
    object-fit: contain;
}

.cta-text {
    max-width: 150px;
    height: auto;
    padding: 0 1em;
    text-align: justify;
}

/* Styling intro section of help.html */
.help-intro {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin: 1rem 0;
}

.help-intro-left {
    max-width: 500px;
    height: auto;
}

.help-intro-left > p {
    padding: 1rem 0;
    text-align: justify;
}

.help-intro-right > img {
    max-width: 500px;
    height: auto;
    object-fit: contain;
    border-radius: 10px;
}

/* Styling how to help section of help.html */
#help-how {
    min-height: 300px;
    width: 100%;
    background-color: #f2ecd2;
    padding-bottom: 2em;
}

.how-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    flex-grow: 1;
    gap: 1em;
}

.how-box {
    max-width: 300px;
    max-height: 300px;
    border-radius: 10px;
    overflow: hidden;
}

.how-box > img {
    max-width: 100%;
    height: auto;
    object-fit: contain;
    opacity: 1;
    transition: opacity 0.5s linear;
    position: relative;
}

.how-box > p {
    background-color: #372b25;
    color: white;
    width: 100%;
    height: 100%;
    padding: 5em 2.5em;
    text-align: justify;
    position: relative;
    top: -304px;
    left: 0;
    opacity: 0;
    transition: opacity 0.5s linear;
}

.how-box:hover > img, .how-box:focus > img {
    opacity: 0;
}

.how-box:hover > p, .how-box:focus > p {
    opacity: 1;
}

/* Styling cta section of help.html */
#cta-help-page {
    min-height: 150px;
    text-align: center;
}

.cta-help {
    max-width: 300px;
    text-align: justify;
    margin: 0 auto;
}

button {
    background-color: #944c42;
    color: white;
    font-size: 1.5rem;
    font-weight: 700;
    padding: 1em 2em;
    margin: 2em 0;
    border: 1px solid #944c42;
    border-radius: 10px;
}

button:hover {
    background-color: white;
    color:#944c42;
    border: 1px solid #944c42;
}

/* Styling for contact page */
#contact-info {
    background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url("../media/contact-hog.webp") center center/ cover no-repeat;
}

.contacts {
    background-color: rgba(242, 236,210, 0.7);
    border-radius: 10px;
    padding: 0 1em;
}

.contacts h2, h3 {
    padding: 0.5em 0;
}

.contacts h3 {
    font-size: 1.5rem;
}

#emergency-contact {
    max-width: 600px;
    min-height: 200px;
    margin: 0 auto;
    padding-bottom: 1em;
}

#emergency-contact > p {
    margin: 1rem;
}

.contact-form {
    max-width: 600px;
    min-height: 600px;
    font-weight: 600;
    padding-bottom: 1em;
}

.contact-location {
    width: 600px;
    min-height: 600px;
    line-height: 1.5em;
}

.contact-boxes {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 2em;
    padding: 2em;
}

.form-input {
    background-color: whitesmoke;
    width: 100%;
    height: 2rem;
    padding: 0 1em;
    margin-top: 0.5em;
    margin-bottom: 1em;
    border: 1px solid #944c42;
    border-radius: 4px;
}

.checkbox-help {
    text-align: center;
}

#contact-message {
    width: 100%;
    height: 100px;
    border-radius: 4px;
    padding: 0.5em;
    border: 1px solid #944c42;
}

#submit-button {
    padding: 1rem 2.5rem;
    background-color: #944c42;
    color: white;
    font-size: 1em;
    font-weight: 600;
    border: 1px solid #944c42;
    border-radius: 4px;
    margin-top: 1em;
    float: right;
}

#submit-button:hover {
    background-color: white;
    color: #944c42;
    border: 1px solid #944c42;
}

#contact-map {
    text-align: center;
    padding: 2em;
}

#contact-iframe {
    border: 1px solid #944c42;
    border-radius: 10px;
    max-width: 300px;
    height: 300px;
}

/* Styling received.html */
#thank-you p {
    text-align: center;
}

/* Styling footer */
footer {
    height: 5rem;
    background-color: #1a1a1a;
    text-align: center;
    width: 100%;
    margin-top: auto;
}

.footer-socials > li {
    display: inline;
}

footer a {
    color: white;
    text-align: center;
    padding: 0 1.5rem;
    line-height: 4.75rem;
    transition: all 0.9s linear 0s;
}

footer a:hover {
    color: #78a51a;
}

/* Keyframes for H1 fade-in */

@keyframes fade-in-text {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

/* Media Queries */
@media (max-width: 450px) {
    .contact-location {
        min-height: 500px
    }
    #contact-map {
        padding: 0.5em;
    }
    #contact-iframe {
        max-width: 200px;
        max-height: 200px;
    }
}

@media (max-width: 500px) {
    .help-intro-left {
        max-width: 300px;
    }
    .help-intro-right > img {
        max-width: 300px;
    }
    footer a {
        padding: 0 0.25rem;
    }
}

@media (max-width: 650px) {
    header {
        padding: 0 2%;
    }
    .logo-small {
        display: block;
    }
    .logo-big {
        display: none;
    }
    .nav-links > li {
        margin-left: 1rem;
    }
    #help-hero {
        background-position: 30% center;
    }
    #emergency-contact {
        margin: 0 2em;
    }
}

@media (max-width: 380px) {
    .logo-small {
        display: none;
    }
    header {
        justify-content: space-evenly;
        padding-right: 1.5rem;
    }
    .checkbox-help {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .checkbox-help input {
        margin-bottom: 1em;
    }
}

@media (max-width: 900px) {
    .cta-wrapper {
        flex-direction: column;
        align-items: center;
    }
    .cta-text {
        max-width: 350px;
    }
}

@media (min-height: 981px) {
    #contact-info {
        min-height: 100vh;
        display: grid;
        align-items: center;
    }
}

@media (max-width: 1200px) and (min-width: 690px) {
    .reasons {
        justify-content: space-between;
        padding: 0 2em;
    }
}

